--- a/src/index.html
+++ b/src/index.html
@@ -162,7 +162,131 @@
 
     </main>
     <footer class="footer">
+      <div class="footer__info">
+        <div class="footer__top">
+          <div class="footer__top-part">
+            <div class="footer__logo">NA<br>MU</div>
+            <div class="footer__icons">
+              <a target="_blank"
+                  rel="noopener"
+                  href="#"
+              >
+                <img
+                  src="./images/icons/facebook.svg"
+                  alt="НАМУ на Facebook"
+                  width="24"
+                  height="24"
+                >
+              </a>
+              <a target="_blank"
+                rel="noopener"
+                href="#"
+              >
+                <img
+                    src="./images/icons/instagram.svg"
+                    alt="НАМУ на Instagram"
+                    width="24"
+                    height="24"
+                  >
+              </a>
 
+            </div>
+          </div>
+          <div class="footer__schedule">
+            <div class="footer__schedule-left">
+              <p class="footer__paragraph bottom-margined">
+                Графік роботи
+              </p>
+              <p class="footer__paragraph">
+                <strong> 12:00 — 20:00</strong> середа
+              </p>
+              <p class="footer__paragraph">
+                <strong>12:00 — 20:00</strong> четвер
+              </p>
+              <p class="footer__paragraph">
+                <strong>12:00 — 20:00</strong> п’ятниця
+              </p>
+              <p class="footer__paragraph">
+                <strong>11:00 — 19:00</strong> субота
+              </p>
+              <p class="footer__paragraph bottom-margined">
+                <strong>11:00 — 19:00</strong> неділя
+              </p>
+              <p class="footer__paragraph">
+                Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину
+          до закриття музею
+              </p>
+            </div>
+            <div class="footer__schedule-right">
+              <p class="footer__paragraph bottom-margined">
+                Контакти:
+              </p>
+              <p class="footer__paragraph">
+                вул. М. Грушевського, 6;
+              </p>
+              <p class="footer__paragraph">
+                Київ, 01001
+              </p>
+              <p class="footer__paragraph">
+                тел. +38 (044) 278-13-57
+              </p>
+              <p class="footer__paragraph">
+                факс +38 (044) 278-74-54
+              </p>
+              <p class="footer__paragraph">
+                e-mail: info@namu.kiev.ua
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__line"></div>
+
+        <div class="footer__menu">
+          <div class="footer__space"></div>
+          <div class="footer__menu-left">
+            <nav class="footer__nav nav">
+              <ul class="nav__list">
+                <li class="footer__nav-item">
+                  <a href="#" class="link footer__nav-link">Галерея</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="link footer__nav-link">Виставки та події</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="link footer__nav-link">Відвідування</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="link footer__nav-link">Стати нашим другом</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer__menu-right">
+            <nav>
+              <ul class="nav__list">
+                <li class="footer__nav-item">
+                  <a href="#" class="link footer__nav-link">Про Нас</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="link footer__nav-link">Магазин</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="link footer__nav-link">Блог</a>
+                </li>
+                <li class="footer__nav-item">
+                  <a href="#" class="link footer__nav-link">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+
+      </div>
+      <div class="footer__copyright">
+        <p class="bottom-margined">Designed by Zhyriada Marina</p>
+        <p>Copyright © 2019. All Rights Reserved.</p>
+      </div>
     </footer>
   </body>
 </html
