--- a/src/index.html
+++ b/src/index.html
@@ -135,9 +135,40 @@
           </div>
         </section>
 
-        <section class="section">
+        <section class="gallery">
           <h2 class="section__title">Галерея</h2>
-
+          <div class="gallery__images">
+            <img
+            src="./images/photos/gallery/1.png"
+            alt="Федір Кричевський.Наречена"
+            class="gallery__img"
+            >
+            <img
+              src="./images/photos/gallery/2.png"
+              alt="Петро Левченко. Глухомань"
+              class="gallery__img"
+            >
+            <img
+              src="./images/photos/gallery/3.png"
+              alt="Кіріак Костанді. Гуси"
+              class="gallery__img"
+            >
+            <img
+              src="./images/photos/gallery/4.png"
+              alt="картина з галереї"
+              class="gallery__img"
+            >
+            <img
+              src="./images/photos/gallery/5.png"
+              alt="картина з галереї"
+              class="gallery__img"
+            >
+            <img
+              src="./images/photos/gallery/6.png"
+              alt="картина з галереї"
+              class="gallery__img"
+            >
+          </div>
         </section>
 
         <section class="subscribe">
