--- a/src/index.html
+++ b/src/index.html
@@ -8,48 +8,50 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__top container">
+      <div class="container header__top">
         <div class="burger-memu container">
           <span class="burger-memu__line"></span>
         </div>
-        <h2 class="header__logo ">na mu</h2>
+        <h2 class="header__logo">na mu</h2>
         <a href="#event" class="header__event">події</a>
-        <nav class="header-nav container">
-          <h2 class="header-nav__logo">na mu</h2>
-          <ul class="header-nav__list">
-            <li class="header-nav__item">
-              <a href="#gallery" class="header-nav__link">Гелерея</a>
-            </li>
-            <li class="header-nav__item">
-              <a href="#event" class="header-nav__link">Виставки та події</a>
-            </li>
-            <li class="header-nav__item">
-              <a href="#art" class="header-nav__link">Відвідування</a>
-            </li>
-            <li class="header-nav__item">
-              <a href="#subscription" class="header-nav__link">Стати нашим другом</a>
-            </li>
-            <li class="header-nav__item">
-              <a href="" class="header-nav__link">Про Нас</a>
-            </li>
-            <li class="header-nav__item">
-              <a href="#" class="header-nav__link">Магазин</a>
-            </li>
-            <li class="header-nav__item">
-              <a href="#" class="header-nav__link">Блог</a>
-            </li>
-            <li class="header-nav__item">
-              <a href="#info" class="header-nav__link">Контакти</a>
-            </li>
-          </ul>
-          <div class="header-nav__search">
-            <img
-              src="images/search.png"
-              class="header-nav__search-img"
-              alt="Іконка пошуку"
-            >
-          </div>
-        </nav>
+        <div class="header__nav">
+          <nav class="header-nav container">
+            <h2 class="header-nav__logo">na<br> mu</h2>
+            <ul class="header-nav__list">
+              <li class="header-nav__item">
+                <a href="#gallery" class="header-nav__link">Гелерея</a>
+              </li>
+              <li class="header-nav__item">
+                <a href="#event" class="header-nav__link">Виставки та події</a>
+              </li>
+              <li class="header-nav__item">
+                <a href="#art" class="header-nav__link">Відвідування</a>
+              </li>
+              <li class="header-nav__item">
+                <a href="#subscription" class="header-nav__link">Стати нашим другом</a>
+              </li>
+              <li class="header-nav__item">
+                <a href="" class="header-nav__link">Про Нас</a>
+              </li>
+              <li class="header-nav__item">
+                <a href="#" class="header-nav__link">Магазин</a>
+              </li>
+              <li class="header-nav__item">
+                <a href="#" class="header-nav__link">Блог</a>
+              </li>
+              <li class="header-nav__item">
+                <a href="#info" class="header-nav__link">Контакти</a>
+              </li>
+            </ul>
+            <div class="header-nav__search">
+              <img
+                src="images/search.png"
+                class="header-nav__search-img"
+                alt="Іконка пошуку"
+              >
+            </div>
+          </nav>
+        </div>
       </div>
       <div class="header__backgraund">
         <div class="header__title ">
