--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./styles/index.scss">
   </head>
   <body>
-    <header class="header">
-      <div class="container header__top">
-        <div class="burger-memu container">
+    <header class="header container--header">
+      <div class="header__top container">
+        <div class="burger-memu">
           <span class="burger-memu__line"></span>
         </div>
         <h2 class="header__logo">na mu</h2>
