Finished creating landing

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <header class="page-header header">
+    <header class="page-header header" id="home">
       <div class="header__container container">
+        <div class="header__wrapper">
+          <img
+            class="header__burger js-header__burger"
+            src="images/burger-icon.svg"
+            alt="Показати меню"
+            width="24"
+            height="24"
+          >
+          <a class="header__logo logo">
+            <img
+              class="logo__img"
+              src="images/logo.svg"
+              alt="Логотип Художнього музею"
+              width="56"
+              height="61"
+            >
+          </a>
+        </div>
+        <nav class="header__nav js-header__nav nav">
+          <div class="nav__container container">
+            <img
+            class="nav__close js-nav__close"
+            src="images/close-icon.svg"
+            alt="Сховати меню"
+            width="20"
+            height="20"
+          >
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#events" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Відвідування
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Стати нашим другом
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Магазин
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Блог
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+
+        </nav>
       </div>
     </header>
     <main class="page-main">
+      <section class="page-main__promo promo">
+        <img
+          class="promo__img"
+          src="images/promo-bg.png"
+          alt=""
+          width="320"
+          height="300"
+        >
+        <div class="promo__container">
+          <h1 class="promo__title main-title">
+            Худож<span class="main-title__part">ній</span> Музей
+          </h1>
+          <div class="promo__btn">
+            <a href="#" class="promo__link">
+              Квитки
+            </a>
+          </div>
+        </div>
+      </section>
       <section class="page-main__events events" id="events">
         <div class="events__container container">
           <h2 class="events__title">
@@ -48,7 +140,7 @@
                   <p class="event__date">26.08 - 29.11.2019</p>
                 </div>
                 <h3 class="event__title">
-                  <a href="" class="event__link event__link--exhibition">
+                  <a href="#" class="event__link event__link--exhibition">
                     Йду і повертаюсь
                   </a>
                 </h3>
@@ -87,7 +179,7 @@
                   <p class="event__date">26.08 - 29.11.2019</p>
                 </div>
                 <h3 class="event__title">
-                  <a href="" class="event__link event__link--exhibition">
+                  <a href="#" class="event__link event__link--exhibition">
                     І спогади і мрії
                   </a>
                 </h3>
@@ -126,7 +218,7 @@
               <p class="event__date">26/08/2019 - 11:00</p>
             </div>
             <h3 class="event__title">
-              <a href="" class="event__link">
+              <a href="#" class="event__link">
                 Від класицизму до романтизму
               </a>
             </h3>
@@ -172,7 +264,7 @@
           </div>
         </div>
       </section>
-      <section class="page-main__subscription subscription" id="subscription">
+      <section class="page-main__subscription subscription">
         <div class="subscription__container container">
           <h2 class="subscription__title">
             Підписка
@@ -211,169 +303,160 @@
     </main>
     <footer class="page-footer footer">
       <div class="footer__container container">
-        <div class="footer__box">
-          <a href="#home" class="footer__logo logo">
-            <img
-              class="logo__img"
-              src="images/logo.svg"
-              alt="Логотип Художнього музею"
-              width="63"
-              height="72"
-            >
-          </a>
-          <div class="footer__socials socials">
-            <ul class="socials__list">
-              <li class="socials__item">
-                <a target="_blank"
-                  rel="noopener"
-                  class="socials__link"
-                  href="#"
-                >
-                  <img
-                    class="socials__img"
-                    src="images/fb-icon.svg"
-                    alt="Художній музей на Facebook"
-                    width="24"
-                    height="24"
+        <div class="footer__inner">
+          <div class="footer__box">
+            <a href="#home" class="footer__logo logo">
+              <img
+                class="logo__img"
+                src="images/logo.svg"
+                alt="Логотип Художнього музею"
+                width="63"
+                height="72"
+              >
+            </a>
+            <div class="footer__socials socials">
+              <ul class="socials__list">
+                <li class="socials__item">
+                  <a target="_blank"
+                    rel="noopener"
+                    class="socials__link"
+                    href="#"
                   >
-                </a>
-              </li>
-              <li class="socials__item">
-                <a target="_blank"
-                  rel="noopener"
-                  class="socials__link"
-                  href="#"
-                >
-                  <img
-                    class="socials__img"
-                    src="images/insta-icon.svg"
-                    alt="Художній музей в Instagram"
-                    width="24"
-                    height="24"
+                    <img
+                      class="socials__img"
+                      src="images/fb-icon.svg"
+                      alt="Художній музей на Facebook"
+                      width="24"
+                      height="24"
+                    >
+                  </a>
+                </li>
+                <li class="socials__item">
+                  <a target="_blank"
+                    rel="noopener"
+                    class="socials__link"
+                    href="#"
                   >
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="footer__wrapper">
-          <div class="footer__info info">
-            <div class="info__schedule schedule">
-              <h3 class="schedule__title">
-                Графік роботи
-              </h3>
-              <ul class="schedule__list">
-                <li class="schedule__item">
-                  <span class="schedule__time">12:00 — 20:00 </span>середа
-                </li>
-                <li class="schedule__item">
-                  <span class="schedule__time">12:00 — 20:00 </span> четвер
-                </li>
-                <li class="schedule__item">
-                  <span class="schedule__time">12:00 — 20:00 </span>п’ятниця
-                </li>
-                <li class="schedule__item">
-                  <span class="schedule__time">11:00 — 19:00 </span>субота
-                </li>
-                <li class="schedule__item">
-                  <span class="schedule__time">11:00 — 19:00</span>неділя
+                    <img
+                      class="socials__img"
+                      src="images/insta-icon.svg"
+                      alt="Художній музей в Instagram"
+                      width="24"
+                      height="24"
+                    >
+                  </a>
                 </li>
               </ul>
-              <div class="schedule__text">
-                Вихідні понеділок, вівторок
-                Каса припиняє роботу за 1 годину
-                до закриття музею
-              </div>
-            </div>
-            <div class="info__contacts contacts">
-              <h3 class="contacts__title">
-                Контакти:
-              </h3>
-              <div class="contacts__text">
-                вул. М. Грушевського, 6; Київ, 01001
-                тел. +38 (044) 278-13-57
-                факс +38 (044) 278-74-54
-                e-mail: info@namu.kiev.ua
-              </div>
             </div>
           </div>
-          <div class="footer__info info">
-            <ul class="info__list">
-              <li class="info__item">
-                <a href="#"
-                  class="info__link"
-                  target="_blank"
-                  rel="noopener"
-                >
-                  Галерея
-                </a>
-              </li>
-              <li class="info__item">
-                <a href="#"
-                  class="info__link"
-                  target="_blank"
-                  rel="noopener"
-                >
-                  Виставки та події
-                </a>
-              </li>
-              <li class="info__item">
-                <a href="#"
-                  class="info__link"
-                  target="_blank"
-                  rel="noopener"
-                >
-                  Відвідування
-                </a>
-              </li>
-              <li class="info__item">
-                <a href="#"
-                  class="info__link"
-                  target="_blank"
-                  rel="noopener"
-                >
-                  Стати нашим другом
-                </a>
-              </li>
-            </ul>
-            <ul class="info__list">
-              <li class="info__item">
-                <a href="#"
-                  class="info__link"
-                  target="_blank"
-                  rel="noopener"
-                >
-                  Про Нас
-                </a>
-              </li>
-              <li class="info__item">
-                <a href="#"
-                  class="info__link"
-                  target="_blank"
-                  rel="noopener"
-                >
-                  Магазин
-                </a>
-              </li>
-              <li class="info__item">
-                <a href="#"
-                  class="info__link"
-                  target="_blank"
-                  rel="noopener"
-                >
-                  Блог
-                </a>
-              </li>
-              <li class="info__item">
-                <a href="#"
-                  class="info__link"
-                  target="_blank"
-                  rel="noopener"
-                >
-                  Контакти
-                </a>
-              </li>
-            </ul>
+          <div class="footer__wrapper">
+            <div class="footer__info info">
+              <div class="info__box">
+                <h3 class="info__title">
+                  Графік роботи:
+                </h3>
+                <div class="info__text info__text--time">
+                  <p><span class="info__time">12:00 — 20:00 </span>середа</p>
+                  <p><span class="info__time">12:00 — 20:00 </span> четвер</p>
+                  <p><span class="info__time">12:00 — 20:00 </span>п’ятниця</p>
+                  <p><span class="info__time">11:00 — 19:00 </span>субота</p>
+                  <p><span class="info__time">11:00 — 19:00 </span>неділя</p>
+                </div>
+                <br>
+                <div class="info__text">
+                  <h3 class="info__title">
+                    Вихідні:
+                  </h3>
+                   понеділок, вівторок.<br><br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </div>
+              </div>
+              <div class="info__box">
+                <h3 id="contacts" class="info__title">
+                  Контакти:
+                </h3>
+                <div class="info__text">
+                  вул. М. Грушевського, 6<br>
+                  Київ, 01001<br>
+                  тел. +38 (044) 278-13-57<br>
+                  факс +38 (044) 278-74-54<br>
+                  e-mail: info@namu.kiev.ua
+                </div>
+              </div>
+            </div>
+            <div class="footer__info info">
+              <ul class="info__list">
+                <li class="info__item">
+                  <a href="#gallery"
+                    class="info__link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a href="#events"
+                    class="info__link"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a href="#"
+                    class="info__link"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Відвідування
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a href="#"
+                    class="info__link"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Стати нашим другом
+                  </a>
+                </li>
+              </ul>
+              <ul class="info__list">
+                <li class="info__item">
+                  <a href="#"
+                    class="info__link"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a href="#"
+                    class="info__link"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Магазин
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a href="#"
+                    class="info__link"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Блог
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a href="#contacts"
+                    class="info__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="footer__copyright copyright">
@@ -381,7 +464,7 @@
             Designed by Zhyriada Marina
           </p>
           <p class="copyright__text">
-            Copyright © 2019. All Rights Reserved.
+            Copyright © 2019. All Rights Reserved
           </p>
         </div>
       </div>
