--- a/src/index.html
+++ b/src/index.html
@@ -15,35 +15,38 @@
     <header class="header header--margin">
 
       <div class="header__hamburger hamburger">
-        <div class="hamburger__button"></div>
-        <nav class="hamburger__nav nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#" class="link nav__link">Галерея</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="link nav__link">Виставки та події</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="link nav__link">Відвідування</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="link nav__link">Стати нашим другом</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="link nav__link">Про Нас</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="link nav__link">Магазин</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="link nav__link">Блог</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="link nav__link">Контакти</a>
-            </li>
-          </ul>
-        </nav>
+
+        <div class="hamburger__wrapper">
+          <div class="hamburger__logo">NA<br>MU</div>
+          <nav class="hamburger__nav nav">
+            <ul class="nav__list hamburger__nav-list">
+              <li class="hamburger__nav-item">
+                <a href="#gallery" class="link hamburger__nav-link">Галерея</a>
+              </li>
+              <li class="hamburger__nav-item">
+                <a href="#events" class="link hamburger__nav-link">Виставки та події</a>
+              </li>
+              <li class="hamburger__nav-item">
+                <a href="#attendance" class="link hamburger__nav-link">Відвідування</a>
+              </li>
+              <li class="hamburger__nav-item">
+                <a href="#" class="link hamburger__nav-link">Стати нашим другом</a>
+              </li>
+              <li class="hamburger__nav-item">
+                <a href="#" class="link hamburger__nav-link">Про Нас</a>
+              </li>
+              <li class="hamburger__nav-item">
+                <a href="#" class="link hamburger__nav-link">Магазин</a>
+              </li>
+              <li class="hamburger__nav-item">
+                <a href="#" class="link hamburger__nav-link">Блог</a>
+              </li>
+              <li class="hamburger__nav-item">
+                <a href="#contacts" class="link hamburger__nav-link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </div>
 
       <div class="header__logo logo">NA<br>MU</div>
@@ -79,7 +82,7 @@
     <main >
 
       <div class="centered">
-        <section class="section">
+        <section class="section" id="events">
           <h2 class="section__title">Актуальні події</h2>
           <div class="event event--left">
             <img class="image event__image"
@@ -118,7 +121,7 @@
             </div>
           </div>
         </section>
-        <section class="lection">
+        <section class="lection" id="attendance">
 
           <img class="image lection__image"
             src="./images/photos/background/1.png"
@@ -135,7 +138,7 @@
           </div>
         </section>
 
-        <section class="gallery">
+        <section class="gallery" id="gallery">
           <h2 class="section__title">Галерея</h2>
           <div class="gallery__images">
             <img
@@ -192,7 +195,7 @@
       </div>
 
     </main>
-    <footer class="footer">
+    <footer class="footer" id="contacts">
       <div class="footer__info">
         <div class="footer__top">
           <div class="footer__top-part">
@@ -279,13 +282,13 @@
             <nav class="footer__nav nav">
               <ul class="nav__list">
                 <li class="footer__nav-item">
-                  <a href="#" class="link footer__nav-link">Галерея</a>
+                  <a href="#gallery" class="link footer__nav-link">Галерея</a>
                 </li>
                 <li class="footer__nav-item">
-                  <a href="#" class="link footer__nav-link">Виставки та події</a>
+                  <a href="#events" class="link footer__nav-link">Виставки та події</a>
                 </li>
                 <li class="footer__nav-item">
-                  <a href="#" class="link footer__nav-link">Відвідування</a>
+                  <a href="#attendance" class="link footer__nav-link">Відвідування</a>
                 </li>
                 <li class="footer__nav-item">
                   <a href="#" class="link footer__nav-link">Стати нашим другом</a>
@@ -306,7 +309,7 @@
                   <a href="#" class="link footer__nav-link">Блог</a>
                 </li>
                 <li class="footer__nav-item">
-                  <a href="#" class="link footer__nav-link">Контакти</a>
+                  <a href="#contacts" class="link footer__nav-link">Контакти</a>
                 </li>
               </ul>
             </nav>
