Fixed some bugs

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
-
+    <link rel="icon" href="images/logo.svg">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
@@ -33,11 +33,11 @@
         <nav class="header__nav js-header__nav nav">
           <div class="nav__container container">
             <img
-            class="nav__close js-nav__close"
-            src="images/close-icon.svg"
-            alt="Сховати меню"
-            width="20"
-            height="20"
+              class="nav__close js-nav__close"
+              src="images/close-icon.svg"
+              alt="Сховати меню"
+              width="20"
+              height="20"
           >
             <ul class="nav__list">
               <li class="nav__item">
@@ -91,7 +91,7 @@
         <img
           class="promo__img"
           src="images/promo-bg.png"
-          alt=""
+          alt="Фотографія Художнього Музею"
           width="320"
           height="300"
         >
@@ -109,7 +109,7 @@
       <section class="page-main__events events" id="events">
         <div class="events__container container">
           <h2 class="events__title">
-          Актуальні події
+            Актуальні події
           </h2>
           <article class="events__item event">
             <div class="event__wrapper event__wrapper--left">
@@ -130,7 +130,7 @@
                   <img
                     class="event__img"
                     src="images/event1-mb.jpg"
-                    alt="Фотография события"
+                    alt="Фотографія події"
                     >
                 </picture>
               </a>
@@ -169,7 +169,7 @@
                   <img
                     class="event__img"
                     src="images/event2-mb.jpg"
-                    alt="Фотография события"
+                    alt="Фотографія події"
                     >
                 </picture>
               </a>
@@ -208,7 +208,7 @@
               <img
                 class="event__img"
                 src="images/event3-mb.jpg"
-                alt="Фотография события"
+                alt="Фотографія події"
                 >
             </picture>
           </a>
@@ -232,34 +232,34 @@
           </h2>
           <div class="gallery__wrapper">
             <img
-            class="gallery__img"
-            src="images/gallery1-dt.jpg"
-            alt="Фото с галлереи"
+              class="gallery__img"
+              src="images/gallery1-dt.jpg"
+              alt="Фото з галлереї"
             >
             <img
-            class="gallery__img"
-            src="images/gallery2-dt.jpg"
-            alt="Фото с галлереи"
+              class="gallery__img"
+              src="images/gallery2-dt.jpg"
+              alt="Фото з галлереї"
             >
             <img
-            class="gallery__img"
-            src="images/gallery3-dt.jpg"
-            alt="Фото с галлереи"
+              class="gallery__img"
+              src="images/gallery3-dt.jpg"
+              alt="Фото з галлереї"
             >
             <img
-            class="gallery__img"
-            src="images/gallery4-dt.jpg"
-            alt="Фото с галлереи"
+              class="gallery__img"
+              src="images/gallery4-dt.jpg"
+              alt="Фото з галлереї"
             >
             <img
-            class="gallery__img"
-            src="images/gallery5-dt.jpg"
-            alt="Фото с галлереи"
+              class="gallery__img"
+              src="images/gallery5-dt.jpg"
+              alt="Фото з галлереї"
             >
             <img
-            class="gallery__img"
-            src="images/gallery6-dt.jpg"
-            alt="Фото с галлереи"
+              class="gallery__img"
+              src="images/gallery6-dt.jpg"
+              alt="Фото з галлереї"
             >
           </div>
         </div>
@@ -289,7 +289,6 @@
               name="email"
               placeholder="E-mail"
               required
-              autofocus
             >
             <input
               class="form__btn"
@@ -317,7 +316,8 @@
             <div class="footer__socials socials">
               <ul class="socials__list">
                 <li class="socials__item">
-                  <a target="_blank"
+                  <a
+                    target="_blank"
                     rel="noopener"
                     class="socials__link"
                     href="#"
@@ -332,7 +332,8 @@
                   </a>
                 </li>
                 <li class="socials__item">
-                  <a target="_blank"
+                  <a
+                    target="_blank"
                     rel="noopener"
                     class="socials__link"
                     href="#"
@@ -388,21 +389,18 @@
             <div class="footer__info info">
               <ul class="info__list">
                 <li class="info__item">
-                  <a href="#gallery"
-                    class="info__link"
-                  >
+                  <a href="#gallery" class="info__link">
                     Галерея
                   </a>
                 </li>
                 <li class="info__item">
-                  <a href="#events"
-                    class="info__link"
-                  >
+                  <a href="#events" class="info__link">
                     Виставки та події
                   </a>
                 </li>
                 <li class="info__item">
-                  <a href="#"
+                  <a
+                    href="#"
                     class="info__link"
                     target="_blank"
                     rel="noopener"
@@ -411,7 +409,8 @@
                   </a>
                 </li>
                 <li class="info__item">
-                  <a href="#"
+                  <a
+                    href="#"
                     class="info__link"
                     target="_blank"
                     rel="noopener"
@@ -422,7 +421,8 @@
               </ul>
               <ul class="info__list">
                 <li class="info__item">
-                  <a href="#"
+                  <a
+                    href="#"
                     class="info__link"
                     target="_blank"
                     rel="noopener"
@@ -431,7 +431,8 @@
                   </a>
                 </li>
                 <li class="info__item">
-                  <a href="#"
+                  <a
+                    href="#"
                     class="info__link"
                     target="_blank"
                     rel="noopener"
@@ -440,7 +441,8 @@
                   </a>
                 </li>
                 <li class="info__item">
-                  <a href="#"
+                  <a
+                    href="#"
                     class="info__link"
                     target="_blank"
                     rel="noopener"
@@ -449,8 +451,7 @@
                   </a>
                 </li>
                 <li class="info__item">
-                  <a href="#contacts"
-                    class="info__link"
+                  <a href="#contacts" class="info__link"
                   >
                     Контакти
                   </a>
